--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -41,7 +39,7 @@
       color: #00bfff;
       padding: 8px 16px;
       text-decoration: none;
-      font-family: "Century Gothic";
+      font-family: "Century Gothic", Arial;
       font-weight: bold;
       }
       li a:hover {
@@ -64,7 +62,7 @@
       background-color: #000010;
       color: #ffffff;
       font-family: "Century Gothic", Arial;
-      border-color: #ffffff;
+      border-color: #000000;
       border-style: solid;
       border-radius: 25px;
       padding-left: 10px;
@@ -85,26 +83,23 @@
   </head>
   <body>
     <h1 class="center imagetext">Welcome to my Website!</h1>
-    <p style="color: red !important; font-family: arial !important; float: right;">Version: 2.3</p>
-    <ul>
+    <ul class="nav" style="float: left;">
       <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My shop</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/recipes.html">Recipes</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/comments.html">Comments</a></li>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/countdown.html">Countdown <span style="color: red;">beta</span></a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
     </ul>
-    <p class="text-fix center">This website is still under construction. Check for updates frequently!</p>
-    <p class="text-fix center" style="font-family: 'Century Gothic;'">This page was created by Dominic Motekaitis, with HTML, CSS, and JS</p>
-    <div id="main-content">
+    <div id="main-content" style="">
       <div id="title">
         <h2>Updates and Stuff:</h2>
       </div>
+      <p style="color: red;">Version: 2.4</p>
       <p>Not much here yet.</p>
       <a href="https://discord.gg/YTxPb2n">Link to join my Discord server</a>
       <p class="text-fix" style="font-family: 'Century Gothic', Arial;"><span style="color: orange;">UPDATE:</span> <span style="font-family: "Century Gothic", Arial; color: #00bfff;">I have added a comments section. Click the new link on the nav bar on the left to go to it! You can report bugs and suggest ideas in the comments section</span></p>
     </div>
   </body>
 </html>
-
-
