--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
       font-family: "Century Gothic", Arial !important;
       text-align: center;
       }
+      .nav {
+        border-radius: 25px;
+        overflow: hidden;
+      }
       <link rel="icon" href="http://daonlydominic.github.io/DominicWebsite/avatar.png">
     </style>
     <title>Welcome! | Dominic's Website</title>
@@ -96,7 +100,7 @@
       <div id="title">
         <h2>Updates and Stuff:</h2>
       </div>
-      <p style="color: red;">Version: 2.4</p>
+      <p style="color: red;">Version: 2.5</p>
       <p>Not much here yet.</p>
       <a href="https://discord.gg/YTxPb2n">Link to join my Discord server</a>
       <p class="text-fix" style="font-family: 'Century Gothic', Arial;"><span style="color: orange;">UPDATE:</span> <span style="font-family: "Century Gothic", Arial; color: #00bfff;">I have added a comments section. Click the new link on the nav bar on the left to go to it! You can report bugs and suggest ideas in the comments section</span></p>
