--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       margin: 0;
       padding: 0;
       width: 200px;
-      background-color: #303030;
+      background-color: #14161b;
       }
       li a {
       display: block;
@@ -100,10 +100,10 @@
       <div id="title">
         <h2>Updates and Stuff:</h2>
       </div>
-      <p style="color: red;">Version: 2.5</p>
+      <p style="color: red;">Version: 2.5.1</p>
       <p>Not much here yet.</p>
       <a href="https://discord.gg/YTxPb2n">Link to join my Discord server</a>
-      <p class="text-fix" style="font-family: 'Century Gothic', Arial;"><span style="color: orange;">UPDATE:</span> <span style="font-family: "Century Gothic", Arial; color: #00bfff;">I have added a comments section. Click the new link on the nav bar on the left to go to it! You can report bugs and suggest ideas in the comments section</span></p>
+      <p class="text-fix" style="font-family: 'Century Gothic', Arial;"><span style="color: orange;">UPDATE:</span> <span style="font-family: "Century Gothic", Arial; color: #00bfff;">Any ideas? Join my Disord server, and you can chat with other users. I'm adding round nav bars to all sites. Countdown will not be up for a while, so stay tuned!</span></p>
     </div>
   </body>
 </html>
