--- a/comments.html
+++ b/comments.html
@@ -68,6 +68,10 @@
     padding-left: 100px;
     background-size: 75%;
     }
+    .nav {
+        border-radius: 25px;
+        overflow: hidden;
+    }
   </style>
   <script></script>
   <head>
