--- a/dominicchat.html
+++ b/dominicchat.html
@@ -49,6 +49,10 @@
       -webkit-transition: width 2s;
       transition: font-size .5s;
       }
+      .nav {
+        border-radius: 25px;
+        overflow: hidden;
+      }
     </style>
     <title>Dominic's Website | Chat</title>
   </head>
