--- a/dominicshop.html
+++ b/dominicshop.html
@@ -50,6 +50,10 @@
     -webkit-transition: width 2s;
     transition: font-size .5s;
     }
+    .nav {
+        border-radius: 25px;
+        overflow: hidden;
+    }
   </style>
   <script></script>
   <head>
