--- a/espressobusiness.html
+++ b/espressobusiness.html
@@ -46,6 +46,10 @@
         -webkit-transition: width 2s;
         transition: font-size .5s;
       }
+    .nav {
+        border-radius: 25px;
+        overflow: hidden;
+    }
 </style>
 <head>
     <title>Dominic's Website | Espresso Business</title>
