--- a/recipes.html
+++ b/recipes.html
@@ -74,6 +74,10 @@
         -webkit-transition: width 2s;
         transition: font-size .5s;
       }
+      .nav {
+        border-radius: 25px;
+        overflow: hidden;
+      }
     </style>
     <title>Dominic's Website | Recipes</title>
   </head>
