--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
       <div id="title">
         <h2>Updates and Stuff:</h2>
       </div>
-      <p style="color: red;">Version: 2.5.1</p>
+      <p style="color: red;">Version: 2.5.2</p>
       <p>Not much here yet.</p>
       <a href="https://discord.gg/YTxPb2n">Link to join my Discord server</a>
-      <p class="text-fix" style="font-family: 'Century Gothic', Arial;"><span style="color: orange;">UPDATE:</span> <span style="font-family: "Century Gothic", Arial; color: #00bfff;">Any ideas? Join my Disord server, and you can chat with other users. I'm adding round nav bars to all sites. Countdown will not be up for a while, so stay tuned!</span></p>
+      <p class="text-fix" style="font-family: 'Century Gothic', Arial;"><span style="color: orange;">UPDATE:</span> <span style="font-family: "Century Gothic", Arial; color: #00bfff;">Bad news: This website is getting in the way of schoolwork, so I will have to stop updating it. Sorry! But I will work on during vacations.</span></p>
     </div>
   </body>
 </html>
