--- a/comments.html
+++ b/comments.html
@@ -7,11 +7,11 @@
     background-color: #000000;
     }
     .font1 {
-    font-family: "Century Gothic";
+    font-family: "Century Gothic", Arial;
     color: #00bfff;
     }
     .white {
-    font-family: "Century Gothic";
+    font-family: "Century Gothic", Arial;
     color: #ffffff;
     }
     .nav {
@@ -86,6 +86,7 @@
       <li><a href="https://daonlydominic.github.io/DominicWebsite/comments.html">Comments</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
     </ul>
+    <p class="font1">Please do not post unnecessary comments, offensive/rude comments, or ones with innapropriate content. By doing so, you are abusing the privelage of being able to contribute to my site, and proving that you are to immature for those privelages, which will result in them being taken away. Thank you!</p>
     <!-- begin wwww.htmlcommentbox.com -->
 <div style="font-family: Arial !important; color: #00bfff !important;">
   <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
