--- a/comments.html
+++ b/comments.html
@@ -86,7 +86,7 @@
       <li><a href="https://daonlydominic.github.io/DominicWebsite/comments.html">Comments</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
     </ul>
-    <p class="font1">Please do not post unnecessary comments, offensive/rude comments, or ones with innapropriate content. By doing so, you are abusing the privelage of being able to contribute to my site, and proving that you are to immature for those privelages, which will result in them being taken away. Thank you!</p>
+    <p class="font1">Please do not post unnecessary comments, offensive/rude comments, or ones with innapropriate content. By doing so, you are abusing the privilage of being able to contribute to my site, and proving that you are too immature for those privilages, which will result in them being revoked, and your comments deleted. Thank you!</p>
     <!-- begin wwww.htmlcommentbox.com -->
 <div style="font-family: Arial !important; color: #00bfff !important;">
   <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
