--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <script src="daonlydominic.github.io/DominicWebsite/script.js"></script>
-    <script></script>
+    <script>
+      alert("Buzz off Smiths!");
+    </script>
     <link rel="icon" type="image/png" href="https://daonlydominic.github.io/DominicWebsite/avatar_8PF_icon.ico">
     <style>
       .imagetext {
