--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My shop</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/recipes.html">Recipes</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/comments.html">Comments</a></li>
-      <li><a href="https://daonlydominic.github.io/DominicWebsite/countdown.html">Countdown <span style="color: red;">beta</span></a></li>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/whiteboard.html">Whiteboard <span style="color: red;">beta</span></a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
     </ul>
     <div id="main-content" style="">
