--- a/whiteboard.html
+++ b/whiteboard.html
@@ -82,7 +82,7 @@
     <title>Dominic's Website | Recipes</title>
   </head>
   <body>
-    <h1 id="title" class="font1"><span>Dominic's Recipes</span></h1>
+    <h1 id="title" class="font1"><span>Dominic's <span style="color: #ff0000">Whiteboard</span></span></h1>
     <ul class="nav">
       <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
