--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@
       <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My shop</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/recipes.html">Recipes</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/comments.html">Comments</a></li>
-      <li><a href="https://daonlydominic.github.io/DominicWebsite/whiteboard.html">Whiteboard <span style="color: red;">beta</span></a></li>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/whiteboard.html">Whiteboard <span style="color: #ffa500;">new</span></a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
     </ul>
     <div id="main-content" style="">
       <div id="title">
         <h2>Updates and Stuff:</h2>
       </div>
-      <p style="color: red;">Version: 2.5.2</p>
+      <p style="color: red;">Version: 2.6</p>
       <p>Not much here yet.</p>
       <a href="https://discord.gg/YTxPb2n">Link to join my Discord server</a>
-      <p class="text-fix" style="font-family: 'Century Gothic', Arial;"><span style="color: orange;">UPDATE:</span> <span style="font-family: "Century Gothic", Arial; color: #00bfff;">Bad news: This website is getting in the way of schoolwork, so I will have to stop updating it. Sorry! But I will work on during vacations.</span></p>
+      <p class="text-fix" style="font-family: 'Century Gothic', Arial;"><span style="color: ffa500;">UPDATE:</span> <span style="font-family: "Century Gothic", Arial; color: #00bfff;">I added a new Whiteboard! You can go on the new Whiteboard and draw anything, as long as it is appropriate. I will try to add a live music stream later. Comment how you like the new Whiteboard!</span></p>
     </div>
   </body>
 </html>
