--- a/whiteboard.html
+++ b/whiteboard.html
@@ -79,7 +79,7 @@
         overflow: hidden;
       }
     </style>
-    <title>Dominic's Website | Recipes</title>
+    <title>Dominic's Website | Whiteboard</title>
   </head>
   <body>
     <h1 id="title" class="font1"><span>Dominic's<span style="color: #ff0000"> Whiteboard</span></span></h1>
@@ -89,6 +89,7 @@
       <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My Shop</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/recipes.html">Recipes</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/comments.html">Comments</a></li>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/whiteboard.html">Whiteboard <span style="color: #ffa500;">new</span></a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
     </ul>
     <p style="font-family: 'Century Gothic', Arial; color: #ffffff;">Welcome to the Whiteboard. Here you can draw, doodle, and make a contribution to my site. Make sure no content is innapropriate! Thank you!</p>
