--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <p style="color: red;">Version: 2.6</p>
       <p>Not much here yet.</p>
       <a href="https://discord.gg/YTxPb2n">Link to join my Discord server</a>
-      <p class="text-fix" style="font-family: 'Century Gothic', Arial;"><span style="color: ffa500;">UPDATE:</span> <span style="font-family: "Century Gothic", Arial; color: #00bfff;">I removed a bunch of my Firefox Addons, and Force Quitted this one task that seemed to be a virus (it seemed to be useless, and was taking up more than 95% of my CPU), and now this computer runs extremely smoothly! Awesome! Before this, the CPU Cooling Fans would race as soon as I watched a video or opened more than 10 tabs!</span></p>
+      <p class="text-fix" style="font-family: 'Century Gothic', Arial;"><span style="color: ffa500;">UPDATE:</span> <span style="font-family: "Century Gothic", Arial; color: #00bfff;">I am switching over from GitHub, my current web hosting service, to x10 Hosting. The new link will be located <a href="//daonlydominic.x10.bz">here</a></span></p>
     </div>
   </body>
 </html>
